# qb-notebook

./: .gitignore  AGENTS.md  README.md  contributors_MI.json  download_artifact.py  pr_intervals.ipynb  pr_merge_throughput.ipynb  pr_open_durations.ipynb  pyproject.toml  queue_windows.ipynb  reviewers_MI.json
.github/workflows/: ci.yml  publish-plots-pages.yml
docs/: filtering.md  intervals.md  plotting.md  schema-notes.md
qb_notebook/: __init__.py  artifacts.py  data_io.py  filters.py  generate_plot_site.py  intervals.py  plotting.py
tests/: test_data_io.py  test_filters.py  test_intervals.py  test_plotting.py
