[project]
name = "qb-notebook"
version = "0.1.0"
description = "Exploratory analysis helpers for the queueboard-core parquet dump."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.3",
  "pyarrow>=18.0.0",
  "polars>=1.11.0",
  "matplotlib>=3.9.2",
  "seaborn>=0.13.2",
  "plotly>=5.24.1",
  "scipy>=1.13.1",
  "statsmodels>=0.14.4",
  "jupyterlab>=4.2.5",
  "ipykernel>=6.29.5",
  "tabulate>=0.9.0",
  "altair>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
  "ruff>=0.8.4",
  "pytest>=8.3.4",
]
